--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
+  <title>Maintenance</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -13,10 +13,10 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+ Under Maintenance!
 </p>
 <p>
-  Sean made a change
+  - Team NinetyFour
 </p>
 
 </body>
